Closed
Bug 803194
Opened 12 years ago
Closed 12 years ago
Clicking the gear in the Facebook sidebar crashes nightly on Mac
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
VERIFIED
FIXED
mozilla19
Tracking | Status | |
---|---|---|
firefox17 | --- | unaffected |
firefox18 | + | verified |
People
(Reporter: verdi, Unassigned)
References
Details
(Keywords: crash, regression, reproducible)
Crash Data
Attachments
(2 files)
7.41 KB,
image/jpeg
|
Details | |
1.04 KB,
patch
|
roc
:
review+
bajaj
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
When I try to click the gear button in the very bottom right corner of the Facebook sidebar on Mac, Firefox crashes.
No crash reports were generated. It happened for me twice in a row.
Firefox Version: 19.0a1
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:19.0) Gecko/19.0 Firefox/19.0
Using today's 2012-10-18 version of Nightly.
Comment 1•12 years ago
|
||
I can also reproduce this crash on 10.7.4
Is this reproducible with the 17.0b2 candidates?
ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/17.0b2-candidates/build1/
Comment 3•12 years ago
|
||
I'm quite certain that this is in the layers code again, and I am crashing on both windows and osx. Here is the traceback on osx.
Process: firefox-bin [97065]
Path: /Applications/FirefoxNightly.app/Contents/MacOS/firefox-bin
Identifier: org.mozilla.nightly
Version: 19.0a1 (1912.10.18)
Code Type: X86-64 (Native)
Parent Process: ??? [1]
Date/Time: 2012-10-18 11:59:21.370 -0700
OS Version: Mac OS X 10.7.5 (11G63)
Report Version: 9
Interval Since Last Report: 541744 sec
Crashes Since Last Report: 6
Per-App Interval Since Last Report: 183 sec
Per-App Crashes Since Last Report: 3
Anonymous UUID: 37BE1717-F920-48B2-985E-CC5400673E32
Crashed Thread: 0 Dispatch queue: com.apple.main-thread
Exception Type: EXC_CRASH (SIGABRT)
Exception Codes: 0x0000000000000000, 0x0000000000000000
Application Specific Information:
objc[97065]: garbage collection is OFF
pure virtual method called
abort() called
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0 libsystem_kernel.dylib 0x00007fff81688ce2 __pthread_kill + 10
1 libsystem_c.dylib 0x00007fff843f67d2 pthread_kill + 95
2 libsystem_c.dylib 0x00007fff843e7a7a abort + 143
3 libc++abi.dylib 0x00007fff8ae8f7bc abort_message + 214
4 libc++abi.dylib 0x00007fff8ae8d09c __cxa_pure_virtual + 18
5 XUL 0x0000000103c3c19c mozilla::layers::ContainerLayer::DefaultComputeEffectiveTransforms(gfx3DMatrix const&) + 1436
6 XUL 0x0000000103c3c19c mozilla::layers::ContainerLayer::DefaultComputeEffectiveTransforms(gfx3DMatrix const&) + 1436
7 XUL 0x0000000103c4d67b mozilla::layers::LayerManagerOGL::EndTransaction(void (*)(mozilla::layers::ThebesLayer*, gfxContext*, nsIntRegion const&, nsIntRegion const&, void*), void*, mozilla::layers::LayerManager::EndTransactionFlags) + 107
8 XUL 0x0000000102dd6323 nsDisplayList::PaintForFrame(nsDisplayListBuilder*, nsRenderingContext*, nsIFrame*, unsigned int) const + 1443
9 XUL 0x0000000102dd5d62 nsDisplayList::PaintRoot(nsDisplayListBuilder*, nsRenderingContext*, unsigned int) const + 178
10 XUL 0x0000000102df52af nsLayoutUtils::PaintFrame(nsRenderingContext*, nsIFrame*, nsRegion const&, unsigned int, unsigned int) + 2863
11 XUL 0x0000000102e0f8e5 PresShell::Paint(nsIView*, nsRegion const&, nsIPresShell::PaintType, bool) + 741
12 XUL 0x000000010326c9ba nsViewManager::ProcessPendingUpdatesForView(nsView*, bool) + 458
13 XUL 0x000000010326e34d nsViewManager::ProcessPendingUpdates() + 285
14 XUL 0x0000000102e16fbe nsRefreshDriver::Notify(nsITimer*) + 2254
15 XUL 0x0000000103baed0c nsTimerImpl::Fire() + 428
16 XUL 0x0000000103baee12 nsTimerEvent::Run() + 34
17 XUL 0x0000000103bab8bd nsThread::ProcessNextEvent(bool, bool*) + 653
18 XUL 0x0000000103b6b85c NS_ProcessPendingEvents_P(nsIThread*, unsigned int) + 76
19 XUL 0x000000010392b797 nsBaseAppShell::NativeEventCallback() + 103
20 XUL 0x00000001038e5309 nsAppShell::ProcessGeckoEvents(void*) + 297
21 com.apple.CoreFoundation 0x00007fff884a14f1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
22 com.apple.CoreFoundation 0x00007fff884a0d5d __CFRunLoopDoSources0 + 253
23 com.apple.CoreFoundation 0x00007fff884c7b49 __CFRunLoopRun + 905
24 com.apple.CoreFoundation 0x00007fff884c7486 CFRunLoopRunSpecific + 230
25 com.apple.HIToolbox 0x00007fff8b3282bf RunCurrentEventLoopInMode + 277
26 com.apple.HIToolbox 0x00007fff8b32f4bf ReceiveNextEventCommon + 181
27 com.apple.HIToolbox 0x00007fff8b32f3fa BlockUntilNextEventMatchingListInMode + 62
28 com.apple.AppKit 0x000000010002a779 _DPSNextEvent + 659
29 com.apple.AppKit 0x000000010002a07d -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 135
30 XUL 0x00000001038e4956 -[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 86
31 com.apple.AppKit 0x00000001000269b9 -[NSApplication run] + 470
32 XUL 0x00000001038e5a92 nsAppShell::Run() + 50
33 XUL 0x000000010376fb49 nsAppStartup::Run() + 41
34 XUL 0x0000000102b9a532 XREMain::XRE_mainRun() + 2882
35 XUL 0x0000000102b9a787 XREMain::XRE_main(int, char**, nsXREAppData const*) + 455
36 XUL 0x0000000102b9aa77 XRE_main + 231
37 firefox-bin 0x0000000100001f0d main + 1165
38 firefox-bin 0x0000000100001734 start + 52
Comment 4•12 years ago
|
||
this looks like bug 795728 is back.
Updated•12 years ago
|
Component: SocialAPI → Layout
Product: Firefox → Core
Comment 5•12 years ago
|
||
This doesn't generate crash report. Is that a bug?
Reporter | ||
Comment 6•12 years ago
|
||
(In reply to Anthony Hughes, Mozilla QA (:ashughes) from comment #2)
> Is this reproducible with the 17.0b2 candidates?
> ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/17.0b2-candidates/
> build1/
The crash does not happen for me with this build.
(In reply to Verdi [:verdi] from comment #6)
> (In reply to Anthony Hughes, Mozilla QA (:ashughes) from comment #2)
> > Is this reproducible with the 17.0b2 candidates?
> > ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/17.0b2-candidates/
> > build1/
>
> The crash does not happen for me with this build.
Thanks Verdi. Setting the status flag to indicate as much.
status-firefox17:
--- → unaffected
Updated•12 years ago
|
Severity: normal → critical
Crash Signature: [@ mozilla::layers::ContainerLayer::DefaultComputeEffectiveTransforms(gfx3DMatrix const&)]
[@ msvcr100.dll@0x8af06]
status-firefox19:
--- → affected
Component: Layout → Graphics: Layers
Depends on: 711953
Keywords: crash,
reproducible
OS: Mac OS X → All
Comment 8•12 years ago
|
||
bug 717758 covers that.
Comment 9•12 years ago
|
||
I can't reproduce this.
What are the exact STR for this bug?
Reporter | ||
Comment 10•12 years ago
|
||
(In reply to Matt Woodrow (:mattwoodrow) from comment #9)
> I can't reproduce this.
>
> What are the exact STR for this bug?
1. Mac 10.7.4 or 10.8.2 with today's nightly
2. Enable Facebook sidebar
3. Click on the gear icon in the lower right hand corner (chat settings gear).
Comment 11•12 years ago
|
||
> 2. Enable Facebook sidebar
How?
Reporter | ||
Comment 12•12 years ago
|
||
(In reply to Matt Woodrow (:mattwoodrow) from comment #11)
> > 2. Enable Facebook sidebar
>
> How?
Ah sorry - the beta version of this isn't public yet. I believe that's due to happen soon though. https://blog.mozilla.org/futurereleases/2012/10/12/firefox-beta-introduces-preliminary-support-for-a-social-api/
Comment 13•12 years ago
|
||
Should this bug be private then?
Can you email me (mwoodrow@mozilla.com) with instructions of how install the sidebar please.
Comment 14•12 years ago
|
||
(In reply to Matt Woodrow (:mattwoodrow) from comment #13)
> Should this bug be private then?
Nope, we've blogged about it already. The candidate builds are available on FTP. We'll be releasing Firefox 17.0b2 on Monday morning. If you need to test before then, please grab one of the candidate builds (or latest Aurora/Nightly).
Comment 15•12 years ago
|
||
I think they allowed everyone now. Flip social.enabled and log on facebook.
Comment 17•12 years ago
|
||
I can confirm that the patch fixes the crash for me on windows.
Attachment #673007 -
Flags: review?(roc) → review+
Comment 18•12 years ago
|
||
Comment 19•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Comment 21•12 years ago
|
||
(In reply to Scoobidiver from comment #20)
> Is Aurora 18 affected?
I have not seen any crashes in aurora (my current normal browser), only nightly. I haven't been using beta, but have not heard any issues from any of the people testing the socialapi.
Updated•12 years ago
|
Crash Signature: [@ mozilla::layers::ContainerLayer::DefaultComputeEffectiveTransforms(gfx3DMatrix const&)]
[@ msvcr100.dll@0x8af06] → [@ mozilla::layers::ContainerLayer::DefaultComputeEffectiveTransforms(gfx3DMatrix const&)]
[@ mozilla::layers::ContainerLayer::ComputeEffectiveTransformsForChildren(gfx3DMatrix const&)]
[@ msvcr100.dll@0x8af06]
Updated•12 years ago
|
status-firefox17:
unaffected → ---
status-firefox18:
--- → unaffected
Comment 22•12 years ago
|
||
Matt: bug 795674 (which I assume is what introduced this one -- is this correct?) has tracking18 so should this one also be tracked for 18?
Comment 23•12 years ago
|
||
Felipe: That's correct. We'll want to uplift both bugs to aurora at the same time.
Updated•12 years ago
|
Comment 25•12 years ago
|
||
Comment on attachment 673007 [details] [diff] [review]
Update merged frame changes
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 795674
User impact if declined: Crash with facebook social sidebar
Testing completed (on m-c, etc.): ~1 week on m-c
Risk to taking this patch (and alternatives if risky): Very low risk, just fixes a typo from bug 795674.
String or UUID changes made by this patch: None
Attachment #673007 -
Flags: approval-mozilla-aurora?
Comment 26•12 years ago
|
||
Comment on attachment 673007 [details] [diff] [review]
Update merged frame changes
Approving for Aurora as it has a low risk patch caused by Bug 795674(recently approved)
Attachment #673007 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Updated•12 years ago
|
tracking-firefox18:
--- → +
Comment 27•12 years ago
|
||
Updated•12 years ago
|
Comment 28•12 years ago
|
||
I reproduced the issue on Nightly 2012-10-18.
Verified fixed on FF 18b1 and Nightly 20.0a1 (2012-11-26) on Win 7 x64, Ubuntu 12.04 and Mac OS X 10.7.5.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•