Bug 803194 - Update DisplayItemData and frame data when the merged frame list changes. r=roc a=bajaj